# SAYNA_V3

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: __init__.py  config.py  logging_setup.py  main.py
bot/handlers/: __init__.py  group.py  private.py
bot/middleware/: __init__.py  access_control.py  sequential_processing.py
bot/models/: domain.py  message_flow.py
bot/prompts/: order_mutation_planner.md  persona.md
bot/scheduler/: __init__.py  jobs.py
bot/services/: __init__.py  chad_ai.py  container.py  decision_maker.py  dialogue.py  digest.py  image_generation.py  image_intent_scorer.py  image_prompt_service.py  intent_scorer.py  memory.py  modules.py  orchestrator.py  reminders.py  sheets.py  soul.py  startup_selftest.py  task_order_service.py
bot/utils/: media.py
deploy/: workshop-bot.service
scripts/: bootstrap_mempalace.ps1  seed_memory_profiles.py
tests/: test_decision_maker.py  test_digest.py  test_image_generation.py  test_image_prompt_service.py  test_intent_scorer.py  test_memory_rerank.py  test_orchestrator.py  test_reminders.py  test_task_order_service.py
