[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workshop-telegram-assistant"
version = "0.1.0"
description = "Character Telegram assistant with workshop secretary flows"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "gspread>=6.1.2",
  "APScheduler>=3.10.4",
  "mempalace>=3.3.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["bot*"]
